
* The minVoxels parameter is now adjusted to be at least (minPix +
  minChannels - 1). If it is changed, a warning message is triggered.

* The warning/error reporting has been overhauled, with an improved
  interface for developers. Also, some ERROR instances that previously
  resulted in the program terminating now allow it to continue
  (provided that is possible given the error).

* The way one-dimensional arrays were dealt with was unsatisfactory,
  both with the way positions were registered and the format of the
  graphical output. Improvements have been made such that a 1D data
  structure is assumed to be a spectrum, and so positions in the
  spectrum are reported as z-pixels (or the equivalent world
  coordinate). Instead of a 2D moment map, the X-windows display will
  show the spectrum with all detected pixels plus the final list of
  detections highlighted, along with the detection and growth
  thresholds. This plot will also be written to the "detectionMap" image. 

* All spectral plots will now show the detection (and growth, if
  applicable) thresholds when plotting the peak flux spectrum.

* Accessing FITS files when a subsection string is provided has been
  streamlined. The cfitsio package, which handles the FITS access,
  creates a temporary file containing this image section, and this
  meant the previous approach was slow, particularly for large
  files/sections. Now the file is only opened once and the overhead of
  creating the temporary file is only encountered once.

* Several aspects of the processing & output did not handle a
  non-existent WCS well. This has been improved, so that all stages of
  execution will proceed without errors.

Bug fixes:

* The absence of a BLANK keyword when trimming will now not trigger a
  failure, only a warning message.

* The flux unit conversion (eg. from Jy/beam to mJy/beam) was not
  being applied correctly when an existing reconstructed or smoothed